<resources>
    <string name="app_name">SchoolinfoApp</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="schedule_change">Substitute schedule change</string>
    <string name="new_entries">New entries</string>
    <string name="special_messages">Special messages</string>
    <string name="no_filter_applied">No filter applied</string>
    <string name="small_filter_explanation">Please set up the filters to get a personalised substitution schedule.</string>
    <string name="filter_help">You can add the classes you want to appear in the overview to the main filter.\n\nThe subjects/courses filter excludes the content you don\'t want to appear in your overview, for example French or Latin. To make sure the filter recognizes your subject you have to type in the shortcut used in the substitute schedule, i.e. \"fra1\" or \"lat2\". If you want to hide every Latin subject you can simply write \"lat\."</string>
    <string name="settings">Settings</string>
    <string name="again">Try again</string>
    <string name="login_required">Login required!</string>
    <string name="do_login">Login</string>
    <string name="login">Login</string>
    <string name="do_login_submit">Log In</string>
    <string name="username_or_password_wrong">Username or password incorrect</string>
    <string name="could_not_connect">Could not connect to server</string>
    <string name="unknown_error_login">Unknown error occurred while trying to log in</string>
    <string name="abort">Cancel</string>
    <string name="overview">Overview</string>
    <string name="your_overview">Your overview</string>
    <string name="lesson">Lesson</string>
    <string name="substitute">Substitute</string>
    <string name="work_autonomous">Self dependent work</string>
    <string name="shift">Shift</string>
    <string name="exam">Exam</string>
    <string name="supervision">Supervision</string>
    <string name="lunch">Lunch</string>
    <string name="task_through">Task by</string>
    <string name="shifted_to_today">Shifted to</string>
    <string name="shifted_to">Shifted to</string>
    <string name="instead_of">Instead of</string>
    <string name="canceled">Canceled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="substitute_schedule">Substitute schedule</string>
    <string name="news">News</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Log out</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="touch_to_logout">Touch to log out</string>
    <string name="school_settings">School settings</string>
    <string name="school_class">Class</string>
    <string name="username">Username</string>
    <string name="notifications">Notifications</string>
    <string name="show_notifications">Show notifications</string>
    <string name="notify_class">Notify me if my class is affected</string>
    <string name="automatic_updates">Automatically update plans</string>
    <string name="only_update_over_wireless_lan">Only update over Wi-Fi</string>
    <string name="information">Information</string>
    <string name="developer">Developers</string>
    <string name="developer_info">About the developers</string>
    <string name="github">GitHub</string>
    <string name="license">License</string>
    <string name="build_version">Build version</string>
    <string name="update_always">Update always</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="hidden_filters">Hidden subjects/courses</string>
    <string name="teacher">Teacher</string>
    <string name="subject_course_name">Subject-/coursename</string>
    <string name="invalid_filter">Invalid filter</string>
    <string name="hide_subject">Hide subject/course</string>
    <string name="edit_filter">Edit filter</string>
    <string name="all">All</string>
    <string name="filters_active">%d filters active</string>
    <string name="no_filter_active">No filter active</string>
    <string name="contact_us">Contact us if you have any problems or improvement suggestions for the app</string>
    <string name="ok">OK</string>
    <string name="main_filter">Main filter</string>
    <string name="add_main_filter">Add Main filter</string>
    <string name="help">Help</string>
    <string name="password">Password</string>
    <string name="garnish">Garnish</string>
    <string name="exams">Exams</string>
    <string name="lhour">Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="no_entries">No entries</string>
    <string name="supported_schools">Supported schools</string>
    <string name="anonymous">Anonymous user</string>
    <string name="download_error">An error occurred while downloading</string>
    <string name="developer_dialog">Your substitute schedule. Built by \n\nHauke Oldsen\nLasse Rosenow\nLennart Schmidt\nFabian Schultis</string>
    <string name="dessert">Dessert</string>
    <string name="design">Design</string>
    <string name="dark_theme">Dark theme</string>
    <string name="personalisation_changeColor">Change color</string>
    <string name="personalisation_changeColor_description">Main color of the app</string>
    <string name="show_pwd">Show password</string>
    <string name="personalisation_pickColor">Pick color</string>
    <string name="download_schools">Downloading school list</string>
    <string name="room">Room</string>
    <string name="classes">Classes</string>
    <string name="i_accept">I accept the</string>
    <string name="downloading_image">Downloading image…</string>
    <string name="other_school">Other School</string>
    <string name="school_id">School ID</string>
    <string name="fu_firstpage_title">Your SchoolinfoApp</string>
    <string name="fu_firstpage_content">Be informed about your school everywhere and at any time.</string>
    <string name="fu_secondpage_title">Schedule changes adapted to you</string>
    <string name="fu_secondpage_content">Customize the substitution schedule and apply it to your class!</string>
    <string name="fu_thirdpage_title">Subject filter</string>
    <string name="fu_thirdpage_content">Add filters for subjects not affecting you to exclude them from your own overview page.</string>
    <string name="fu_fourthpage_title">Not enough?</string>
    <string name="fu_fourthpage_content">More features: You can read news of your school and cafeteria schedules if your school supports these features.</string>
    <string name="fu_fifthpage_title">Exam filter</string>
    <string name="fu_fifthpage_content">Mark exams affecting you to let them appear in the overview where you get an useful view of upcoming exams.</string>
    <string name="fu_sixth_title">Enjoy the App!</string>
    <string name="fu_sixth_content">Click on the arrow at the bottom right to get started.</string>
    <string name="user">User</string>
    <string name="please_read">Read this, please!</string>
    <string name="contact">Support</string>
    <string name="notification_led">Notification light</string>
    <string name="vibration">Vibration</string>
    <string name="explanation">Explanation</string>
    <string name="delete">Delete</string>
    <string name="delete_filter">Delete filter</string>
    <string name="delete_filter_message">Do you really want to delete this subject/course filter?</string>
    <string name="delete_main_filter_message">Do you really want to delete this main filter?</string>
    <string name="exam_explain">Here you can see all exams grouped by grades. You can check the exams you are going to write to make them appear in your overview. You can also add the exams from your overview to the calendar.</string>
    <string name="entries">Entries:</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="no_exams_selected">No exams selected</string>
    <string name="no_cal_avail">No calendar available</string>
    <string name="cancel">Cancel</string>
    <string name="just_now">Current</string>
    <string name="time_diff">Updated\n%d min. ago</string>
    <string name="time_diff_hours">Updated\n%d hrs. ago</string>
    <string name="all_subjects_including">Hide all %s-subjects</string>
    <string name="all_subjects_including_disabled">Hide all subjects</string>
    <string name="logged_in_as">Logged in as %s</string>
    <string name="maintenance">The server is currently being maintained</string>
    <string name="unknown_error">Unknown error</string>
    <string name="filter_exists">This filter already exists</string>
    <string name="no_main_filter">No main filter available</string>
    <string name="upgrade1.3title">Attention! Very important changes in version 1.3</string>
    <string name="upgrade1.3">The new version 1.3 includes a big change in the filter menu:\nIf you want more than one class to appear in the overview, you can now enter multiple classes in the main filter.\n\nIn addition you can now check on the cafeteria schedule (after app restart), choose the color of the notification light and enjoy a couple more new features.\n\nYour SchoolinfoApp Team</string>
    <string name="token_expired">Your session expired. Please sign in again.</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="legal">Legal</string>
    <string name="share_content_base">%1$2s in %2$2s in lesson %3$2s</string>
    <string name="share_content_teacher">%1$2s in %2$2s by %3$2s in lesson %4$2s</string>
    <string name="share_content_room">%1$2s in %2$2s in lesson %3$2s in room %4$2s</string>
    <string name="share_content_teacher_room">%1$2s in %2$2s by %3$2s in lesson %4$2s in room %5$2s</string>
    <string-array name="vibration_values">
        <item>Off</item>
        <item>Short</item>
        <item>Default</item>
        <item>Long</item>
    </string-array>
    <string-array name="theme_mode_values">
        <item>Follow system</item>
        <item>Automatically</item>
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string name="terms_title">Terms of use</string>
    <string-array name="terms">
        <item>The content shown in the app is preliminary. We cannot guarantee integrity.</item>
        <item>In general only the plans at school are valid.</item>
        <item>If mobile phones are prohibited in your school, you are still not allowed to use them, even when using this app.</item>
        <item>If you have questions or suggestions, please send us an email: support@cedgetec.com</item>
    </string-array>
    <string name="privacy_statement">Privacy statement</string>
</resources>