<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.gebatzens.sia.MainActivity" >

    <item android:id="@+id/action_refresh"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />

    <item android:id="@+id/action_help"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/help"
        android:orderInCategory="100"
        android:icon="@drawable/ic_help"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_addToCalendar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:title="@string/add_to_calendar"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_to_calendar"
        app:showAsAction="ifRoom"/>

</menu>