<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.gebatzens.sia.LoginActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar" />

    <FrameLayout
        android:id="@+id/ShaderTabLayout"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/toolbar_shadow"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Login progress -->

            <EditText
                android:id="@+id/sidInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/school_id"
                android:inputType="textFilter"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/username"
                android:inputType="textFilter"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sidInput" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameInput"
                app:layout_constraintHorizontal_bias="0.498" />

            <CheckBox
                android:id="@+id/passwordToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_pwd"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintLeft_toLeftOf="@+id/passwordInput" />

            <CheckBox
                android:id="@+id/acceptTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_accept"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordToggle"
                app:layout_constraintLeft_toLeftOf="@+id/passwordToggle" />

            <TextView
                android:id="@+id/acceptTermsLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="4dp"
                android:paddingBottom="4dp"
                android:paddingEnd="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:text="@string/terms_title"
                android:textColor="?colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/acceptTerms"
                app:layout_constraintLeft_toRightOf="@+id/acceptTerms"
                app:layout_constraintTop_toTopOf="@+id/acceptTerms"
                app:layout_constraintVertical_bias="0.666" />

            <Button
                android:id="@+id/login_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/do_login"
                android:textColor="#fff"
                app:layout_constraintRight_toRightOf="@+id/passwordInput"
                app:layout_constraintTop_toBottomOf="@+id/acceptTerms" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</RelativeLayout>