<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/main_filter"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/filter_list_inc"
                    android:isScrollContainer="false"
                    android:listSelector="@color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/no_entries_inc"
                    android:text="@string/no_entries"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/inc_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="#fff"
                    android:text="@string/add_main_filter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/hidden_filters"/>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/filter_list_exc"
                    android:isScrollContainer="false"
                    android:listSelector="@color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="18sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/no_entries_exc"
                    android:text="@string/no_entries"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/exc_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textColor="#fff"
                    android:text="@string/hide_subject"/>

            </LinearLayout>

        </ScrollView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:id="@+id/ShaderTabLayout"
            android:background="@drawable/toolbar_shadow"/>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.design.widget.CoordinatorLayout>

    </RelativeLayout>

</LinearLayout>